# astrospice

./: .gitignore  README.rst  pyproject.toml  setup.cfg  setup.py  test_metakernels.ipynb
.github/workflows/: python-build.yml  python-lint.yml  python-test.yml
astrospice/: __init__.py  body.py  config.py  coords.py  kernel.py  time.py  version.py
astrospice/coords/: __init__.py  body.py  kernel.py
astrospice/net/: __init__.py  generic.py  reg.py  registry.py
astrospice/net/reg/: __init__.py  base.py  spk.py
astrospice/net/sources/: __init__.py  cassini.py  psp.py  solo.py  stereo.py
astrospice/net/tests/: test_searches.py
astrospice/registry/: registry.py
astrospice/registry/sources/: psp.py
astrospice/registry/tests/: test_searches.py
astrospice/tests/: test_body.py  test_coords.py  test_kernel.py  test_registry.py
astrospice/time/: __init__.py  epochs.py
docs/: acknowledging.rst  changelog.rst  conf.py  guide.rst  index.rst  reference.rst
docs/guide/: coordinates.rst  metakernels.rst
docs/reference/: coords.rst  net.rst
examples/: plot_psp_trajectory.py
examples/orbiter_fov/: solo_ANC_soc-eui-fsi-ck_20180930-21000101_V02.bc  solo_ANC_soc-eui-ik_V01.ti  solo_ANC_soc-flown-att_20201119T082309-20201120T003115_V01.bc  solo_ANC_soc-flown-att_20210818T180715-20210819T113551_V01.bc  solo_ANC_soc-sc-fk_V08.tf  solo_ANC_soc-sc-fof-ck_20180930-21000101_V02.bc  solo_ANC_soc-sci-fk_V07.tf  solo_ANC_soc-sclk_20211204_V01.tsc  test.py
licenses/: LICENSE.rst
