[metadata]
name = astrospice
author = David Stansby
author_email = dstansby@gmail.com
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url =
description = A package for finding SPICE kernels and using them with astropy coordinates.
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    bs4
    parfive


[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi

[tool:pytest]
testpaths = "astrospice" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  astrospice/__init*
  astrospice/conftest.py
  astrospice/*setup_package*
  astrospice/tests/*
  astrospice/*/tests/*
  astrospice/extern/*
  astrospice/version*
  */astrospice/__init*
  */astrospice/conftest.py
  */astrospice/*setup_package*
  */astrospice/tests/*
  */astrospice/*/tests/*
  */astrospice/extern/*
  */astrospice/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
