[metadata]
name = astrospice
author = David Stansby
author_email = dstansby@gmail.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://astrospice.readthedocs.io/en/latest/
description = A package for finding SPICE kernels and using them with astropy coordinates.
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    bs4
    parfive
    spiceypy


[options.extras_require]
test =
    hypothesis
    jplephem
    pytest
    pytest-doctestplus
    pytest-cov
    sunpy
docs =
    matplotlib
    sphinx
    sphinx-automodapi
    sphinx-gallery
    sphinx_rtd_theme
    sunpy

[tool:pytest]
testpaths = "astrospice" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst --cov=astrospice/
filterwarnings =
    error
    ignore:numpy.ndarray size changed
    # See https://github.com/Cadair/parfive/issues/65
    ignore:unclosed transport
    # This is fixed in astropy 5, but ignore for older versions
    ignore:unclosed file
markers =
  remote_data

[coverage:run]
omit =
  astrospice/__init*
  astrospice/conftest.py
  astrospice/*setup_package*
  astrospice/tests/*
  astrospice/*/tests/*
  astrospice/extern/*
  astrospice/version*
  */astrospice/__init*
  */astrospice/conftest.py
  */astrospice/*setup_package*
  */astrospice/tests/*
  */astrospice/*/tests/*
  */astrospice/extern/*
  */astrospice/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_

[isort]
balanced_wrapping = True
default_section = THIRDPARTY
include_trailing_comma = True
known_first_party = astrospice
length_sort = False
line_length = 80
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
